main/default/objects/Set_Time__c/Set_Time__c.object-meta.xml
<CustomObject>
    <description>A specific time slot for a band to play at.</description>
    <label>Set Time</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Nome Set Time</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>