main/default/objects/Set_Time__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <referenceTo>Band__c</referenceTo>
    <relationshipLabel>Set Times</relationshipLabel>
    <relationshipName>Set_Times</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>