main/default/objects/Set_Time__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>orario degli stage</description>
    <label>Stage</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Set Times</relationshipLabel>
    <relationshipName>Set_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>